[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menu.gd" type="Script" id=1]
[ext_resource path="res://GFX/Background/bg_layer1.png" type="Texture" id=2]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 4
outline_color = Color( 0.960784, 0.960784, 0.960784, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -80.0
margin_right = 512.0
margin_bottom = 80.0
custom_constants/separation = 25

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.941176, 0.780392, 0.239216, 1 )
text = "Welcome to Hoppy Days!"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 1024.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.788235, 0.14902, 0.14902, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.294118, 0.294118, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.294118, 0.294118, 1 )
text = "PLAY!"
flat = true

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
margin_top = 170.0
margin_right = 1024.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.788235, 0.14902, 0.14902, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.294118, 0.294118, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.294118, 0.294118, 1 )
text = "TUTORIAL"
flat = true

[node name="AboutButton" type="Button" parent="VBoxContainer"]
margin_top = 253.0
margin_right = 1024.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.788235, 0.14902, 0.14902, 1 )
custom_colors/font_color_hover = Color( 0.72549, 0.294118, 0.294118, 1 )
custom_colors/font_color_pressed = Color( 0.72549, 0.294118, 0.294118, 1 )
text = "ABOUT"
flat = true
[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
